Changed filenames and fixed errors which prevented from compilation.

--- a/sprawozdanie1/figures/part2/task2/golf-rules-cv.tex
+++ b/sprawozdanie1/figures/part2/task2/golf-rules-cv.tex
@@ -3,8 +3,8 @@
 \hline
  Ruleset & 
  Size & 
- \multicolumn{2}{1|}{Errors} & 
- \multicolumn{2}{1|}{Errors (test)} \\
+ \multicolumn{2}{|c|}{Errors} & 
+ \multicolumn{2}{|c|}{Errors (test)} \\
 \hline\hline
        1 &    2 &    0 &  0.0\%  &    0 &   0.0\% \\
        2 &    3 &    0 &  0.0\%  &    1 &  50.0\% \\
@@ -20,6 +20,6 @@
     Avg. &  2.9 &  0.7 &  5.7\%  &  0.6 &  40.0\% \\
 \hline
 \end{tabular}
-\caption{\emph{Cross-validation} dla reguł utworzonych ze zbioru \emph{golf}}
+\caption{\emph{Cross-validation} dla regul utworzonych ze zbioru \emph{golf}}
 \label{p2t2-golf-rules-cv}
 \end{table}
