--- a/sprawozdanie1/figures/part2/task2/vote-confidence-level.tex
+++ b/sprawozdanie1/figures/part2/task2/vote-confidence-level.tex
@@ -3,8 +3,8 @@
 \hline
  Confidence Level & 
  Avg. Size & 
- \multicolumn{2}{1|}{Avg. Errors} & 
- \multicolumn{2}{1|}{Avg. Errors (test)} \\
+ \multicolumn{2}{|c|}{Avg. Errors} & 
+ \multicolumn{2}{|c|}{Avg. Errors (test)} \\
 \hline\hline
       0.10 &    2.9 &   11.4 & 4.2\% &    1.8 &  6.0\% \\
       0.30 &    4.2 &   10.0 & 3.7\% &    1.8 &  6.0\% \\
