--- a/sprawozdanie1/figures/part2/task2/vote-redundancy-factor.tex
+++ b/sprawozdanie1/figures/part2/task2/vote-redundancy-factor.tex
@@ -3,8 +3,8 @@
 \hline
  Redundancy Factor & 
  Avg. Size & 
- \multicolumn{2}{1|}{Avg. Errors} & 
- \multicolumn{2}{1|}{Avg. Errors (test)} \\
+ \multicolumn{2}{|c|}{Avg. Errors} & 
+ \multicolumn{2}{|c|}{Avg. Errors (test)} \\
 \hline\hline
       0.10 &    2.0 &    13.5 & 5.0\% &    1.5 &  5.0\% \\
       0.30 &    2.0 &    13.5 & 5.0\% &    1.5 &  5.0\% \\
