--- a/sprawozdanie1/figures/part2/task2/vote-rules-cv.tex
+++ b/sprawozdanie1/figures/part2/task2/vote-rules-cv.tex
@@ -3,8 +3,8 @@
 \hline
  Ruleset & 
  Size & 
- \multicolumn{2}{1|}{Errors} & 
- \multicolumn{2}{1|}{Errors (test)} \\
+ \multicolumn{2}{|c|}{Errors} & 
+ \multicolumn{2}{|c|}{Errors (test)} \\
 \hline\hline
        1 &    4 &   12 & 4.4\% &    1 &  3.3\% \\
        2 &    3 &   12 & 4.4\% &    1 &  3.3\% \\
