--- a/sprawozdanie1/figures/part2/task2/vote-trees-cv.tex
+++ b/sprawozdanie1/figures/part2/task2/vote-trees-cv.tex
@@ -1,15 +1,15 @@
 \begin{table}
 \begin{tabular}{|r||r|rr|rr||r|rr|rr|r|}
 \hline
-&\multicolumn{5}{1||}{Before pruning}&\multicolumn{6}{1|}{After pruning} \\
+&\multicolumn{5}{c||}{Before pruning}&\multicolumn{6}{|c|}{After pruning} \\
 \hline
 Tree & 
 Size & 
-\multicolumn{2}{1|}{Errors} & 
-\multicolumn{2}{1||}{Errors (test)} & 
+\multicolumn{2}{|c|}{Errors} & 
+\multicolumn{2}{c||}{Errors (test)} & 
 Size & 
-\multicolumn{2}{1|}{Errors} & 
-\multicolumn{2}{1|}{Errors (test)} & 
+\multicolumn{2}{|c|}{Errors} & 
+\multicolumn{2}{|c|}{Errors (test)} & 
 Estimate \\
 \hline\hline
     1 &   25 &    7 & 2.6\% &    4 & 13.3\% &    7 &   12 & 4.4\% &    1 &  3.3\%  &   7.3\%  \\
