--- a/sprawozdanie1/part1-trees.tex
+++ b/sprawozdanie1/part1-trees.tex
@@ -6,7 +6,7 @@
 
 \begin{itemize}
 \item \textbf{Obejrzyj zawartość plików \emph{golf.nam}, \emph{golf.dat} i~\emph{golf.tst}; ile przykładów zawiera zbiór uczący? Iloma atrybutami są~one opisane?}
-	\\Zbiór uczący zawiera 14 przykładów. Są one opisane pięcioma atrybutami, w tym jednym atrybutem decyzyjnym.
+\\Zbiór uczący zawiera 14 przykładów. Są one opisane pięcioma atrybutami, w tym jednym atrybutem decyzyjnym.
 
 \item \textbf{Wygeneruj drzewo dla zbioru przykładów \emph{golf}; ustawienia standardowe.}
 
@@ -37,20 +37,20 @@ outlook = rain:
 
 
 \item \textbf{Przeanalizuj wyniki; czy udało się przeprowadzić pruning?}
-	\\Nie udało się przeprowadzić pruningu. Drzewa są identyczne.
+\\Nie udało się przeprowadzić pruningu. Drzewa są identyczne.
 
 \item \textbf{Obejrzyj drzewo; ile ma węzłów decyzyjnych, a~ile liści?}
-	\\Wygenerowane drzewo ma 3 węzły decyzyjne i 5 liści.
+\\Wygenerowane drzewo ma 3 węzły decyzyjne i 5 liści.
 
 \item \textbf{ Prześledź ścieżkę od korzenia do wybranego liścia.}
-		\\W korzeniu znajduje się test związany z atrybutem outlook. Jeśli dla klasyfikowanego przykładu wartość atrybutu outlook wynosi "sunny", to następny węzeł na ścieżce to ten związany z atrybutem humidity. Zakładając, że dla omawianego przykładu wilgotność jest większa niż $ 75\% $ , liściem w analizowanej ścieżce będzie liść odnoszący się decyzji "Don't Play".
-		\\Inaczej mówiąc, ścieżka ta klasyfikuje wszystkie dni w które jest słoneczna pogoda i~wilgotność większa niż $ 75\% $ jako dni, w które nie gra się w golfa.
+	\\W korzeniu znajduje się test związany z atrybutem outlook. Jeśli dla klasyfikowanego przykładu wartość atrybutu outlook wynosi "sunny", to następny węzeł na ścieżce to ten związany z atrybutem humidity. Zakładając, że dla omawianego przykładu wilgotność jest większa niż $ 75\% $ , liściem w analizowanej ścieżce będzie liść odnoszący się decyzji "Don't Play".
+	\\Inaczej mówiąc, ścieżka ta klasyfikuje wszystkie dni w które jest słoneczna pogoda i~wilgotność większa niż $ 75\% $ jako dni, w które nie gra się w golfa.
 		
 \item \textbf{Porównaj estymaty błędu dla drzewa oryginalnego (\emph{Unpruned}) i~uproszczonego (\emph{Pruned}).}
-	\\Estymata błędu dla oryginalnego drzewa wynosi  $ 0\% $ a dla uproszczonego $ 38,5\% $ .
+\\Estymata błędu dla oryginalnego drzewa wynosi  $ 0\% $ a dla uproszczonego $ 38,5\% $ .
 
 \item \textbf{Obejrzyj macierz pomyłek.}
-	\\Ponieważ drzewo oryginalne nie generuje błędów dla zbioru uczącego, to też jedyne co można z niego odczytać, to właśnie, że żadne obiekty nie są błędnie klasyfikowane, oraz że w przypadku 9 przykładów drzewo poprawnie zaklasyfikowało przykłady do klasy "Play" a w 5 przypadkach do klasy ,,Don't Play''.
+\\Ponieważ drzewo oryginalne nie generuje błędów dla zbioru uczącego, to też jedyne co można z niego odczytać, to właśnie, że żadne obiekty nie są błędnie klasyfikowane, oraz że w przypadku 9 przykładów drzewo poprawnie zaklasyfikowało przykłady do klasy "Play" a w 5 przypadkach do klasy ,,Don't Play''.
 
 \end{itemize}
 
@@ -58,15 +58,13 @@ outlook = rain:
 
 \begin{itemize}
 \item \textbf{Dokonaj konsultacji wymyślonego przykładu dla wygenerowanego drzewa.}
-
-	\\Dokonano konsultacji przykładu o wartościach atrybutów: outlook = overcast, temperature = 5, humidity = 100, windy = true. W wyniku konsultacji podanego przykładu otrzymano decyzję "Play". Poneważ wartości atrybutów zostały podane w sposób deterministyczny to decyzja ta była pewna (prawdopodobieństwo, że analizowany przykład należy do klasy "Play" wynosiło 1). Wynik jest zgodny z oczekiwaniami, poniważ wygenerowane drzewo decyzyjne na podstawi galęzi "Outlook = overcast" przydziela wszystkie przykłady z taką wartością atrybutu do klasy "Don't play", niezależnie od wartości pozostałych atrybutów.
+\\Dokonano konsultacji przykładu o wartościach atrybutów: outlook = overcast, temperature = 5, humidity = 100, windy = true. W wyniku konsultacji podanego przykładu otrzymano decyzję "Play". Poneważ wartości atrybutów zostały podane w sposób deterministyczny to decyzja ta była pewna (prawdopodobieństwo, że analizowany przykład należy do klasy "Play" wynosiło 1). Wynik jest zgodny z oczekiwaniami, poniważ wygenerowane drzewo decyzyjne na podstawi galęzi "Outlook = overcast" przydziela wszystkie przykłady z taką wartością atrybutu do klasy "Don't play", niezależnie od wartości pozostałych atrybutów.
 	
 \item \textbf{Konsultowanie przykładu ,,niepełnego''; dokładnie przeanalizuj wynik.}
-
-	\\Przykład niepełny miał postać: (overcast = sunny, temperature = 15, humidity = ?, windy = false). Przechodząc ścieżkę klasyfikującą ten przykład dochodzimy do atrybutu humidity. Nie jest znana wartość analizowanego przykładu na tym atrybucie, więc zostają obliczone prawdopodobieństwa przyjęcia konkretnych wartości. W analizowanym węźle (za gałęzią "sunny") znajduje się 5 przykładów uczących, w tym 2 ( $ 40\% $ ) przyjmują wartość "humidity" większą niż $ 75\% $ a 3  $ ( 60\% ) $ mniejszą. Dlatego przyjmuje się, że analizowany przykład będzie miał z prawdopodobieństwem $ 60\% $ wartość humidity większą niż $ 75\% $ a mniejszą z prawdopodobieństwem $ 40\% $ .	Dalej w drzewie sa juz tylko liście, można więc obliczyć rpawdopodobieństwo całych kompletów wartości: z prawdopodobieństwem $ 40\% $ analizowany przykład przyjmie wartości (overcast = sunny, temperature = 15, humidity  $ > 75\% $, windy = false) a z prawdopodobieństwem $ 60\% $ wartości  (overcast = sunny, temperature = 15, humidity $ >  75\% $ , windy = false). Drugie prawdopodobieństwo jest wyższe, więc z prawdopodobieństwem $ 60\% $ konsultowany przykład zostaje przypisany do klasy "Don't Play"
+\\Przykład niepełny miał postać: (overcast = sunny, temperature = 15, humidity = ?, windy = false). Przechodząc ścieżkę klasyfikującą ten przykład dochodzimy do atrybutu humidity. Nie jest znana wartość analizowanego przykładu na tym atrybucie, więc zostają obliczone prawdopodobieństwa przyjęcia konkretnych wartości. W analizowanym węźle (za gałęzią "sunny") znajduje się 5 przykładów uczących, w tym 2 ( $ 40\% $ ) przyjmują wartość "humidity" większą niż $ 75\% $ a 3  $ ( 60\% ) $ mniejszą. Dlatego przyjmuje się, że analizowany przykład będzie miał z prawdopodobieństwem $ 60\% $ wartość humidity większą niż $ 75\% $ a mniejszą z prawdopodobieństwem $ 40\% $ .	Dalej w drzewie sa juz tylko liście, można więc obliczyć rpawdopodobieństwo całych kompletów wartości: z prawdopodobieństwem $ 40\% $ analizowany przykład przyjmie wartości (overcast = sunny, temperature = 15, humidity  $ > 75\% $, windy = false) a z prawdopodobieństwem $ 60\% $ wartości  (overcast = sunny, temperature = 15, humidity $ >  75\% $ , windy = false). Drugie prawdopodobieństwo jest wyższe, więc z prawdopodobieństwem $ 60\% $ konsultowany przykład zostaje przypisany do klasy "Don't Play"
 	
 \item \textbf{Konsultowanie, gdy znany jest rozkład prawdopodobieństwa.}
-	\\W przypadku przykładu ze znanym rozkładem prawdopodobieństwa analizowane są wszystkie gałęzie o niezerowym prawdopodobieństwie z wagami odpowiadającymi przypisanym danm wartośćiom prawdopodobieństwom. Analizowany przykład miał postać: P(sunny) = $ 0.8 $ , P(overcast) = $ 0.2 $ . Dlatego, jeśli wartość humidity była większa niż $ 75\% $ to algorytm przydzielał przykład z $ 20\% $ prawdopodobieństwem do klasy "Play" i $ 80 \% $ prawdopodobieństwem do klasy "Don't play". Ponieważ dla "humidity" mniejszej niż $ 75\% $ i "outlook" = "sunny" drzewo podejmuje decyzję "Play", taką samą jak przy "outlook" = "overcast", to prtawdopodobieństwa wtedy się sumują i lagorytm podejmuje decyzję "Play" z prawdopodobieństwem $ 100 \% $ .
+\\W przypadku przykładu ze znanym rozkładem prawdopodobieństwa analizowane są wszystkie gałęzie o niezerowym prawdopodobieństwie z wagami odpowiadającymi przypisanym danm wartośćiom prawdopodobieństwom. Analizowany przykład miał postać: P(sunny) = $ 0.8 $ , P(overcast) = $ 0.2 $ . Dlatego, jeśli wartość humidity była większa niż $ 75\% $ to algorytm przydzielał przykład z $ 20\% $ prawdopodobieństwem do klasy "Play" i $ 80 \% $ prawdopodobieństwem do klasy "Don't play". Ponieważ dla "humidity" mniejszej niż $ 75\% $ i "outlook" = "sunny" drzewo podejmuje decyzję "Play", taką samą jak przy "outlook" = "overcast", to prtawdopodobieństwa wtedy się sumują i lagorytm podejmuje decyzję "Play" z prawdopodobieństwem $ 100 \% $ .
 
 \end{itemize}
 
@@ -75,10 +73,7 @@ outlook = rain:
 \begin{itemize}
 \item \textbf{Obejrzyj zbiór \emph{testgain} (\emph{dat} i~\emph{nam}).}
 \item \textbf{Wygeneruj dla niego dwukrotnie drzewo z~użyciem opcji \emph{gain ratio} i~\emph{info gain}; skomentuj wyniki.}
-
-	\\
-
-	Drzewo wygenerowane z użyciem opcji InfoGain:		
+\\Drzewo wygenerowane z użyciem opcji InfoGain:		
 		\begin{verbatim}
 			a1 = 1: A (2.0)
 			a1 = 2: A (2.0)
@@ -109,13 +104,11 @@ outlook = rain:
 Jak widać grupowanie wpłynęło pozytywnie na wielkość generowanego drzewa.
 
 \item \textbf{Analogicznie dla \emph{CRX}: opisać problem (przyznawanie kard kretytowych), obejrzeć zbiór (atrybuty \emph{A4}, \emph{A6} i~\emph{A7} mają wiele wartości); wygenerować drzewo bez i~z~grupowaniem.}
-
-	\\Ponieważ dane dotyczące tego problemu zawierały poufne dane etykiety atrybutów zostały zmienione na nie nieznaczące symbole.
+\\Ponieważ dane dotyczące tego problemu zawierały poufne dane etykiety atrybutów zostały zmienione na nie nieznaczące symbole.
 \\W problemie tym występują dwie klasy decyzyjne: "+" i "-". W zbiorze uczącym mogą mieć one interpretację klientów, którzy odpowiednio: spłacali lub niespłacali zaciągniętych kredytów w terminie spłaty. Przy klasyfikacji mogą mieć one interpretację: pozytywne lub negatywne rozpatrzenie wniosku o przyznanie karty kredytowej.
 Każdy klient opisany jest za pomocą 15 atrybutóW, w tym 6 atrybutów przyjmujących wartości ciągłe i 9 atrybutów przyjmujących wartości ze znanych 2 do 14 elementowych zbiorów.
 
 \item \textbf{Obejrzeć macierz pomyłek dla zbioru uczącego i~testującego; czy w~tym zastosowaniu przydałaby się macierz kosztów pomyłek?}
-
 \\Dla drzewa bez grupowania procent błędnych klasyfikacji w zbiorze trenującym wynosi $ 6,5\% $, w zbiorze testowym $20,5\%$.
 \\Dla drzewa z grupowaniem wartości te wynoszą odpowiednio $6,7\%$ i $17,5\%$. Na podstawie tych wartości można się domyślać, że występuje zjawisko przeuczenia: dla większego drzewa 
 (bez grupowania) różnica w trafność klasyfikacji przykładów ze zbioru uczącego i testowego jest większa niż dla mniejszego drzewa.
@@ -132,7 +125,7 @@ Każdy klient opisany jest za pomocą 15 atrybutóW, w tym 6 atrybutów przyjmuj
 	\item średniego (po \emph{cross-validation}) rozmiaru drzewa uproszczonego,  
 	\item średniej trafności klasyfikowania drzewa uproszczonego na~zbiorze testującym,
 	\item średniej estymaty błędu dla drzewa uproszczonego...
-	\\w funkcji poziomu ufności (odnieś te wyniki do średniej charakterystyki drzewa oryginalnego, nieuproszczonego).
+\\w funkcji poziomu ufności (odnieś te wyniki do średniej charakterystyki drzewa oryginalnego, nieuproszczonego).
 \end{itemize}
 
 Zgodnie z dokumentacją programu c4.5, im mniejsza wartość parametru "Pruning confidence level" tym mniejszy rozmiar drzewa po pruningu. Widać to n wykresie \ref{p1t5a-rozmiar}. Dla porównania, średnia wielkość drzewa przed pruningiem wynosiła $ 63.3 $ .
@@ -162,7 +155,6 @@ Analizując otrzymane wyniki można stwierdzić, że optymalna wielkość drzewa
 
 
 \item \textbf{Poszukiwanie optymalnej wielkości drzewa uproszczonego poprzez prepruning, tj.~manewrowanie minimalną licznością węzła (\emph{Minimum objects}). Dla zbioru \emph{CRX} przebadać przedział od~2 do~10.}
-
 \\Jak widać na rysunku \ref{p1t5b-rozmiar} rozmiar drzewa maleje wraz ze wzrostem minimalnej wielkości węzła, przy czym powyżej wielkości węzła 6 dynamika spadku wielkości drzewa znacząco maleje. Jednocześnie z wykresu \ref{p1t5b-trafnosc} wynika, że dla minimalnej wielkości węzłą 7 drzewo osiąda najwyższą trafność klasyfikacji. W związku z tym optymalną wielkością drzewa uproszczonego przez preprouning jest wielkość 38, która jest osiągana dla minimalnej liczności węzła równej 7.
 
 \begin{figure}	
@@ -189,12 +181,10 @@ Analizując otrzymane wyniki można stwierdzić, że optymalna wielkość drzewa
 
 \begin{itemize}
 \item \textbf{Wyjaśnić zasadę i~opcje: \emph{Trials}, \emph{Initial window size}, \emph{Window increment}.}
-
 \\Technika "okien" ("Windowing") polega na konstruowaniu drzewa na podstawie podzbioru zbioru uczącego zwanego oknem. Początkowa wielkość okna ustalana jest za pomocą parametru "Initial window size". Po skonstruowania drzewa w oparciu o aktualne okno pozostałe przykłądy ze zbioru uczącego są za jego pomocą klasyfikowane. Część z błednie sklasyfikowanych przykładów trafia do nowego "okna". Ich liczbę określa parametr "Window Increment". Na podstawie nowego okna drzewo jest aktualizowane.
 \\Ponieważ początkowe okno jest losowane, to takich okien, a co za tym idzie powstających z nich drzew może być wiele. Ilość generowanych okien ustala parametr "Trials". P otworzeniu wszystkich okien wybierane jest najlepsze z nich.
 
 \item \textbf{Analiza wyników (\emph{CRX})}
-
 \\Wśród 10 wygenerowanych drzew (Trials = 10) ( z wielkościami parametrów Initital window size i window increment dobieranymi przez program) większość okazała się mniejsza od drzewa wygenerowanego bez użycia techniki windowing (Normalne drzewo - wielkość 72, drzewa wygenerowane przy użyciu okien - średnio 67,8; minimalnie 62, maksymalnie 75). Trafność klasyfikacji drzew konstruowanych przy pomocy okien nie różniła się znacząco od drzewa konstruowanego tradycyjnie: różnice wynosiły maksymalnie ok $ \pm 1\% $ . Ogólnie wydaje się, że w testowanym zbiorze technika okien nie przyniosła znacznych korzyści. Może być ona jednak przydatna jeżeli ostotne są ograniczenia pamięciowe.
 \end{itemize}
 
@@ -204,9 +194,7 @@ Analizując otrzymane wyniki można stwierdzić, że optymalna wielkość drzewa
 \item \textbf{Dla zbioru \emph{vote} przygotować kilka[naście] zbiorów uczących o~liczności $n$ zmieniającej się od~50 do~300, ze~skokiem np.~50 przypadków, poprzez wybieranie pierwszych $n$ ze~zbioru \emph{vote.dat}.}
 
 \item \textbf{Wykreślić jako funkcję $n$ rozmiar drzewa uproszczonego oraz trafność klasyfikowania drzewa uproszczonego na zbiorze testującym.}
-
 \\Jak widać na wykresie \ref{p1t7-rozmiar} rozmiar generowanego drzewa rośnie wraz z wielkością zbioru uczącego, aż do wielkości 300 kiedy zaczyna maleć. Po analizie drzew wygenerowanych na podstawie zbiorów o liczności 275 i 300 można zauważyć, że drzewo wygenerowane dla większego zbioru jest mniejsze, ponieważ rozkład klas w węźle jest w nim na tyle mało równomierny (3 / 94 przypadki w porównaniu z 3 / 85 przypadków dla mniejszego zbioru), że entropia w tym węźle jest zbyt mała by opłacało się dokonywać dalszego podziału.
-
 \\
 
 \begin{figure}	
@@ -227,7 +215,6 @@ Analizując otrzymane wyniki można stwierdzić, że optymalna wielkość drzewa
 
 \begin{itemize}
 \item \textbf{Uzyskaj jak najwyższą trafność klasyfikowania ze~zbioru \emph{GERMAN} w~eksperymencie \emph{10-fold CV}. Jakimi parametrami i~mechanizmami można manipulować, by~szukać najwyższej trafności? Kiedy można ufać tak uzyskanej trafności, a~kiedy można mówić o~nadużyciu?}
-
 \\Opcje dostępne w~menu programu \emph{C4.5 for Windows}:
 \begin{itemize}
 \item \textbf{Criterion} 
@@ -245,10 +232,7 @@ Poziom istotności testu statystycznego wykorzystywanego w~postpruningu. Węzeł
 \item \textbf{Minimum objects}
 Minimalna liczba obiektów, z~których można utworzyć liść. Podanie wartości większej niż 1 zapobiega powstawaniu bardzo wyspecjalizowanych ścieżek w~drzewie opisujących pojedyncze obiekty.
 \end{itemize}
-
-
-
-\\Uzyskanej w~skutek manipulowania powyższymi parametrami trafności możemy ufać tylko wtedy, gdy nie istnieje podejrzenie \emph{przespecjalizowania} drzewa. Mechanizm \emph{10-fold~CV} zapobiega przespecjalizowaniu poprzez wielokrotne budowanie drzewa dla różnych podzbiorów zbioru uczącego, nie daje nam to jednak gwarancji uzyskania wysokiej trafności na ,,nie widzianych'' wcześniej przez drzewo przypadkach.
+Uzyskanej w~skutek manipulowania powyższymi parametrami trafności możemy ufać tylko wtedy, gdy nie istnieje podejrzenie \emph{przespecjalizowania} drzewa. Mechanizm \emph{10-fold~CV} zapobiega przespecjalizowaniu poprzez wielokrotne budowanie drzewa dla różnych podzbiorów zbioru uczącego, nie daje nam to jednak gwarancji uzyskania wysokiej trafności na ,,nie widzianych'' wcześniej przez drzewo przypadkach.
 
 Dla domyślnych parametrów (wykorzystanie \emph{Info Gain}, bez użycia mechanizmów \emph{subsetting} i~\emph{probabilistic thresholds}, wartość \emph{minimum objects} ustawiona na~2) średni estymowany błąd wynosi $27.3 \%$.
 
