--- a/sprawozdanie2/sprawozdanie2.tex
+++ b/sprawozdanie2/sprawozdanie2.tex
@@ -8,7 +8,7 @@
 \usepackage{biblatex}
 \usepackage{listings}
 \usepackage[pdftex,hyperfootnotes=true,pdfborder={0 0 0}]{hyperref} %za wszystkimi pakietami; pdfborder nie wszedzie tak samo zaimplementowane bo specyfikacja nieprecyzyjna; pod miktex'em po prostu nie widac wtedy ramek
-\bibliography{sprawozdanie}
+\bibliography{sprawozdanie2}
 
 \input{_ustawienia.tex}
 
